完善 LoadingIndicatorCollectionCell 中 indicator 的正确动画与消失, 在确定没有更多旧 Message 后不再出现.

--- a/Lucuber/Views/ConversationCell/LoadMoreCollectionViewCell/LoadMoreCollectionViewCell.xib
+++ b/Lucuber/Views/ConversationCell/LoadMoreCollectionViewCell/LoadMoreCollectionViewCell.xib
@@ -14,7 +14,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="186" height="100"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="Xnd-EM-JcI"/>
+                    <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="Xnd-EM-JcI"/>
                 </subviews>
             </view>
             <constraints>
