--- a/Lucuber/Base.lproj/Feed.storyboard
+++ b/Lucuber/Base.lproj/Feed.storyboard
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="QaM-kA-mpr">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Feeds View Controller-->
         <scene sceneID="7LT-Wh-mrP">
             <objects>
-                <viewController id="Cq1-wD-nSm" sceneMemberID="viewController">
+                <viewController id="Cq1-wD-nSm" customClass="FeedsViewController" customModule="Lucuber" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="kpV-K9-eTe"/>
                         <viewControllerLayoutGuide type="bottom" id="gi0-eJ-qWW"/>
@@ -17,9 +16,33 @@
                     <view key="view" contentMode="scaleToFill" id="doc-Hx-WLM">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="OFL-Bc-Ig8">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="dpy-Fs-5VI"/>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="dpy-Fs-5VI" firstAttribute="top" secondItem="kpV-K9-eTe" secondAttribute="bottom" constant="120" id="4ce-R3-KZd"/>
+                            <constraint firstItem="dpy-Fs-5VI" firstAttribute="centerX" secondItem="doc-Hx-WLM" secondAttribute="centerX" id="JFg-MK-Dld"/>
+                            <constraint firstAttribute="bottom" secondItem="OFL-Bc-Ig8" secondAttribute="bottom" id="SL4-4X-UPu"/>
+                            <constraint firstItem="OFL-Bc-Ig8" firstAttribute="top" secondItem="doc-Hx-WLM" secondAttribute="top" id="ejE-N9-Pfg"/>
+                            <constraint firstItem="OFL-Bc-Ig8" firstAttribute="leading" secondItem="doc-Hx-WLM" secondAttribute="leading" id="oB5-qM-6mN"/>
+                            <constraint firstAttribute="trailing" secondItem="OFL-Bc-Ig8" secondAttribute="trailing" id="qcg-aO-4a8"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="nX7-gh-aaQ"/>
+                    <navigationItem key="navigationItem" id="nX7-gh-aaQ">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="wcZ-Z1-Dr4">
+                            <connections>
+                                <action selector="creatNewFeed:" destination="Cq1-wD-nSm" id="2MD-hk-Sg1"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="loadingFeedsIndicator" destination="dpy-Fs-5VI" id="HOE-6v-MWC"/>
+                        <outlet property="tableView" destination="OFL-Bc-Ig8" id="gpS-ln-rWL"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Epp-Ol-UN7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
