--- a/LucuberKit/Base.lproj/Main1.storyboard
+++ b/LucuberKit/Base.lproj/Main1.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -58,12 +59,25 @@
                     <view key="view" contentMode="scaleToFill" id="sL7-nm-xNe">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UoI-Yw-B3k">
+                                <rect key="frame" x="65" y="197" width="245" height="365"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="UoI-Yw-B3k" firstAttribute="top" secondItem="HTk-cX-Jzy" secondAttribute="bottom" constant="177" id="5Kb-B3-yf3"/>
+                            <constraint firstItem="UoI-Yw-B3k" firstAttribute="leading" secondItem="sL7-nm-xNe" secondAttribute="leadingMargin" constant="49" id="kPN-bA-IMm"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="UoI-Yw-B3k" secondAttribute="trailing" constant="49" id="wan-Wx-Ql4"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2we-x9-xhD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="870" y="132"/>
+            <point key="canvasLocation" x="869.60000000000002" y="131.78410794602701"/>
         </scene>
     </scenes>
 </document>
